--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0",
     "webpack-merge": "^6.0.1"
+  },
+  "dependencies": {
+    "airtable": "^0.12.2"
   }
 }
